--- a/dwh.cfg
+++ b/dwh.cfg
@@ -1,14 +1,13 @@
 [CLUSTER]
-HOST=
-DB_NAME=
-DB_USER=
+HOST=sparkify-activity-data.cq6fvqv2vait.us-west-2.redshift.amazonaws.com
+DB_NAME=user_activities
+DB_USER=sparkify-analyst
 DB_PASSWORD=
-DB_PORT=
+DB_PORT=5439
 
 [IAM_ROLE]
-ARN=''
-
+ARN=
 [S3]
-LOG_DATA='s3://udacity-dend/log-data'
-LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
-SONG_DATA='s3://udacity-dend/song-data'
+LOG_DATA=s3://udacity-dend/log-data
+LOG_JSONPATH=s3://udacity-dend/log_json_path.json
+SONG_DATA=s3://udacity-dend/song-data
