Final project upload
- Create README
- Add IAC structure and functions

--- a/cluster.cfg
+++ b/cluster.cfg
@@ -1,14 +1,15 @@
 [AWS]
-
+KEY=
+SECRET=
 
 [DWH] 
 DWH_CLUSTER_TYPE=multi-node
-DWH_NUM_NODES=8
+DWH_NUM_NODES=4
 DWH_NODE_TYPE=dc2.large
 
 DWH_IAM_ROLE_NAME=redshift-read
 DWH_CLUSTER_IDENTIFIER=sparkify-activity-data
 DWH_DB=user_activities
 DWH_DB_USER=sparkify-analyst
-DWH_DB_PASSWORD=
+DWH_DB_PASSWORD=ch00seApassword
 DWH_PORT=5439
