--- a/dwh.cfg
+++ b/dwh.cfg
@@ -2,11 +2,12 @@
 HOST=sparkify-activity-data.cq6fvqv2vait.us-west-2.redshift.amazonaws.com
 DB_NAME=user_activities
 DB_USER=sparkify-analyst
-DB_PASSWORD=
+DB_PASSWORD=ch00seApassword
 DB_PORT=5439
 
 [IAM_ROLE]
-ARN=
+ARN=arn:aws:iam::348908832229:role/redshift-read
+
 [S3]
 LOG_DATA=s3://udacity-dend/log-data
 LOG_JSONPATH=s3://udacity-dend/log_json_path.json
